--- a/index.css
+++ b/index.css
@@ -1,3 +1,21 @@
 h1{ 
     background-color: red;
+    text-align: center;
+    margin: 20px;
+    padding: 20px;
+    
+
+}
+
+p{
+    font-weight: bold;
+    
+    float: left;
+
+}
+
+.pitbulls{
+    padding: 200px;
+    float: left;
+
 }
