--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 h1{ 
-    background-color: red;
+    background-color: rgb(0, 26, 255);
     text-align: center;
     margin: 20px;
     padding: 20px;
